--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ section h2 { margin-bottom: 2rem; font-size: 2rem; color: var(--color-primary); 
 /* FOOTER */
 footer { background: var(--color-primary); color: var(--color-background); text-align: center; padding: 2rem 1rem; }
 
-/* BUSCADOR */
+/* BUSCADOR MINIMALISTA */
 .search-container {
   display: flex;
   justify-content: center;
@@ -125,39 +125,29 @@ footer { background: var(--color-primary); color: var(--color-background); text-
   display: flex;
   flex: 1;
   border: 1px solid var(--color-accent);
-  border-radius: 4px;
+  border-radius: 25px;
   overflow: hidden;
   align-items: center;
+  padding-left: 10px;
 }
 
 .search-bar input {
   flex: 1;
-  padding: 0.75rem;
+  padding: 0.5rem 0.75rem;
   border: none;
   outline: none;
   font-size: 16px;
 }
 
-.search-bar button {
-  padding: 0.75rem 1rem;
-  border: none;
-  background: var(--color-primary);
-  color: var(--color-background);
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.search-bar .lupa {
+  font-size: 18px;
+  margin-right: 8px;
+  color: #555;
 }
 
-.search-bar button:hover { background: var(--color-secondary); }
-
-.search-bar .icon { margin-right: 5px; }
-
-/* ICON LUPA */
-.lupa {
-  font-size: 18px;
-  margin-left: 10px;
-  color: #555;
+/* RESPONSIVE BUTTON */
+.search-bar button {
+  display: none; /* ocultamos el botón, solo queda la lupa */
 }
 
 </style>
