--- a/index.html
+++ b/index.html
@@ -138,22 +138,13 @@ footer { background: var(--color-primary); color: var(--color-background); text-
   font-size: 16px;
 }
 
-.search-bar button {
-  padding: 0.75rem 1.5rem;
-  border: none;
-  background: var(--color-primary);
-  color: var(--color-background);
-  cursor: pointer;
-  transition: background 0.3s ease;
-}
-
-.search-bar button:hover { background: var(--color-secondary); }
-
-/* LUPA MONOCROMÁTICA */
+/* LUPA SVG */
 .search-bar .lupa {
-  color: #000; /* negro */
-  font-size: 18px;
-  margin-left: 8px;
+  width: 18px;
+  height: 18px;
+  margin-left: 10px;
+  margin-right: 8px;
+  flex-shrink: 0;
 }
 </style>
 </head>
@@ -192,7 +183,11 @@ footer { background: var(--color-primary); color: var(--color-background); text-
 <div class="search-container">
   <span id="clearBtn">&times;</span>
   <div class="search-bar">
-    <span class="lupa">&#128269;</span>
+    <!-- LUPA SVG -->
+    <svg class="lupa" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+      <circle cx="11" cy="11" r="7" stroke="black" stroke-width="2" fill="none"/>
+      <line x1="16" y1="16" x2="22" y2="22" stroke="black" stroke-width="2"/>
+    </svg>
     <input type="text" id="searchInput" placeholder="Buscar productos...">
   </div>
 </div>
@@ -305,3 +300,4 @@ renderProducts();
 </script>
 </body>
 </html>
+
