--- a/index.html
+++ b/index.html
@@ -93,7 +93,16 @@ section h2 { margin-bottom: 2rem; font-size: 2rem; color: var(--color-primary); 
 }
 
 .product:hover { transform: translateY(-5px); box-shadow: 0 4px 20px rgba(0,0,0,0.1); }
-.product img { width: 100%; border-radius: 8px; margin-bottom: 1rem; }
+
+/* 👇 Aquí el cambio importante */
+.product img { 
+  width: 100%; 
+  aspect-ratio: 1 / 1; /* Fuerza a ser cuadrada */
+  object-fit: cover;   /* Recorta proporcionalmente */
+  border-radius: 8px; 
+  margin-bottom: 1rem; 
+}
+
 .product h3 { margin-bottom: 0.5rem; color: var(--color-secondary); }
 .product p { margin-bottom: 0.5rem; }
 .product .price { font-weight: bold; color: var(--color-primary); }
@@ -299,4 +308,3 @@ renderProducts();
 </script>
 </body>
 </html>
-
