--- a/index.html
+++ b/index.html
@@ -239,12 +239,13 @@ setInterval(showNextSlide, 3000);
 // Productos
 const products = [
   { id:1,name:"PLAYERA OVERSIZE NEGRA 220G",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",category:"ropa",keywords:"playera negra oversize"},
-  { id:2,name:"Pantalón Chino",description:"Cómodo y versátil.",price:"€55.00",image:"images/PLAYERANEGRA1.png",category:"ropa",keywords:"pantalón chino casual"},
-  { id:3,name:"Vestido de Noche",description:"Ideal para eventos formales.",price:"€120.00",image:"images/PLAYERANEGRA1.png",category:"ropa",keywords:"vestido noche elegante formal"},
-  { id:4,name:"Chaqueta de Cuero",description:"Un clásico que nunca pasa de moda.",price:"€150.00",image:"images/PLAYERANEGRA1.png",category:"ropa",keywords:"chaqueta cuero moda"},
-  { id:5,name:"Perfume Floral",description:"Aroma fresco y duradero.",price:"€70.00",image:"images/PERFUME1.png",category:"perfumes",keywords:"perfume amaderado intenso"},
-  { id:7,name:"Perfume Cítrico",description:"Energía y frescura.",price:"€65.00",image:"https://via.placeholder.com/300x200",category:"perfumes",keywords:"perfume cítrico fresco"},
-  { id:8,name:"Perfume Dulce",description:"Dulzura irresistible y sofisticada.",price:"€90.00",image:"https://via.placeholder.com/300x200",category:"perfumes",keywords:"perfume dulce sofisticado"}
+  { id:2,name:"PLAYERA OVERSIZE NEGRA 220G",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",category:"ropa",keywords:"playera negra oversize"},
+  { id:3,name:"PLAYERA OVERSIZE NEGRA 220G",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",category:"ropa",keywords:"playera negra oversize"},
+  { id:4,name:"PLAYERA OVERSIZE NEGRA 220G",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",category:"ropa",keywords:"playera negra oversize"},
+  { id:5,name:"Perfume 120ML",description:"Aroma fresco y duradero.",price:"",image:"images/PERFUME1.png",category:"perfumes",keywords:"perfume amaderado intenso"},
+  { id:6,name:"Perfume 120ML",description:"Aroma fresco y duradero.",price:"€70.00",image:"images/PERFUME1.png",category:"perfumes",keywords:"perfume amaderado intenso"},
+  { id:7,name:"Perfume 60ML",description:"Aroma fresco y duradero.",price:"€70.00",image:"images/PERFUME1.png",category:"perfumes",keywords:"perfume amaderado intenso"},
+  { id:8,name:"Perfume ML",description:"Aroma fresco y duradero.",price:"€70.00",image:"images/PERFUME1.png",category:"perfumes",keywords:"perfume amaderado intenso"},
 ];
 
 // Render
