--- a/index.html
+++ b/index.html
@@ -242,10 +242,10 @@ const products = [
   { id:2,name:"PLAYERA OVERSIZE NEGRA 220G",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",category:"ropa",keywords:"playera negra oversize"},
   { id:3,name:"PLAYERA OVERSIZE NEGRA 220G",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",category:"ropa",keywords:"playera negra oversize"},
   { id:4,name:"PLAYERA OVERSIZE NEGRA 220G",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",category:"ropa",keywords:"playera negra oversize"},
-  { id:5,name:"Perfume 120ML",description:"Aroma fresco y duradero.",price:"",image:"images/PERFUME1.png",category:"perfumes",keywords:"perfume amaderado intenso"},
-  { id:6,name:"Perfume 120ML",description:"Aroma fresco y duradero.",price:"€70.00",image:"images/PERFUME1.png",category:"perfumes",keywords:"perfume amaderado intenso"},
-  { id:7,name:"Perfume 60ML",description:"Aroma fresco y duradero.",price:"€70.00",image:"images/PERFUME1.png",category:"perfumes",keywords:"perfume amaderado intenso"},
-  { id:8,name:"Perfume ML",description:"Aroma fresco y duradero.",price:"€70.00",image:"images/PERFUME1.png",category:"perfumes",keywords:"perfume amaderado intenso"},
+  { id:5,name:"Perfume 120ML",description:"Aroma fresco y duradero.",price:"$299.00",image:"images/PERFUME1.png",category:"perfumes",keywords:"perfume amaderado intenso"},
+  { id:6,name:"Perfume 120ML",description:"Aroma fresco y duradero.",price:"$299.00",image:"images/PERFUME1.png",category:"perfumes",keywords:"perfume amaderado intenso"},
+  { id:7,name:"Perfume 60ML",description:"Aroma fresco y duradero.",price:"$199.00",image:"images/PERFUME1.png",category:"perfumes",keywords:"perfume amaderado intenso"},
+  { id:8,name:"Perfume 60ML",description:"Aroma fresco y duradero.",price:"$199.00",image:"images/PERFUME1.png",category:"perfumes",keywords:"perfume amaderado intenso"},
 ];
 
 // Render
