--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@ nav ul li a {
 nav ul li a:hover { color: var(--color-accent); }
 
 /* CARRUSEL */
-.carousel { position: relative; overflow: hidden; max-height: 700px; margin-top: 70px; } /* altura aumentada */
+.carousel { position: relative; overflow: hidden; max-height: 900px; margin-top: 70px; } /* Altura aumentada */
 .carousel-inner { display: flex; transition: transform 1s ease; }
 .carousel-item { min-width: 100%; position: relative; }
-.carousel-item img, .carousel-item video { width: 100%; display: block; object-fit: cover; max-height: 700px; }
+.carousel-item img, .carousel-item video { width: 100%; display: block; object-fit: cover; max-height: 900px; }
 
 /* SECCIONES */
 section { padding: 4rem 2rem; text-align: center; }
@@ -94,7 +94,6 @@ section h2 { margin-bottom: 2rem; font-size: 2rem; color: var(--color-primary); 
 
 .product:hover { transform: translateY(-5px); box-shadow: 0 4px 20px rgba(0,0,0,0.1); }
 
-/* Imagen cuadrada para todos los productos */
 .product img { 
   width: 100%; 
   aspect-ratio: 1 / 1;
@@ -147,7 +146,6 @@ footer { background: var(--color-primary); color: var(--color-background); text-
   font-size: 16px;
 }
 
-/* LUPA SVG */
 .search-bar .lupa {
   width: 18px;
   height: 18px;
@@ -183,8 +181,8 @@ footer { background: var(--color-primary); color: var(--color-background); text-
         Tu navegador no soporta el elemento de video.
       </video>
     </div>
-    <div class="carousel-item"><img src="https://via.placeholder.com/1200x700?text=Hero+2" alt="Slide 2"></div>
-    <div class="carousel-item"><img src="https://via.placeholder.com/1200x700?text=Hero+3" alt="Slide 3"></div>
+    <div class="carousel-item"><img src="https://via.placeholder.com/1200x900?text=Hero+2" alt="Slide 2"></div>
+    <div class="carousel-item"><img src="https://via.placeholder.com/1200x900?text=Hero+3" alt="Slide 3"></div>
   </div>
 </section>
 
@@ -229,21 +227,22 @@ footer { background: var(--color-primary); color: var(--color-background); text-
 const carouselInner = document.querySelector('.carousel-inner');
 const carouselItems = document.querySelectorAll('.carousel-item');
 let index = 0;
+const video = document.getElementById('videoSlide');
 
-// Función para avanzar slide
 function showNextSlide() {
   index = (index + 1) % carouselItems.length;
+
+  // Reinicia el video si vuelve al primer slide
+  if (index === 0) {
+    video.currentTime = 0;
+    video.play();
+  }
+
   carouselInner.style.transform = `translateX(-${index * 100}%)`;
 }
 
-// Configuramos duración del primer slide según video
-const video = document.getElementById('videoSlide');
-video.addEventListener('loadedmetadata', () => {
-  setTimeout(() => {
-    showNextSlide();
-    setInterval(showNextSlide, 3000); // Los siguientes slides cada 3s
-  }, video.duration * 1000);
-});
+// Cambia de slide cada 5 segundos
+setInterval(showNextSlide, 5000);
 
 // Productos
 const products = [
@@ -257,7 +256,6 @@ const products = [
   { id:8,name:"Perfume 60ML",description:"Aroma fresco y duradero.",price:"$199.00",image:"images/PERFUME1.png",category:"perfumes",keywords:"perfume amaderado intenso"},
 ];
 
-// Render
 function renderProducts(filteredProducts){
   const ropaContainer = document.getElementById('ropaProducts');
   const perfumeContainer = document.getElementById('perfumeProducts');
@@ -278,7 +276,7 @@ function renderProducts(filteredProducts){
   });
 }
 
-// Filtrado automático mientras escribes
+// Filtrado
 const searchInput = document.getElementById('searchInput');
 searchInput.addEventListener('input', ()=>{
   const query = searchInput.value.toLowerCase();
@@ -289,14 +287,12 @@ searchInput.addEventListener('input', ()=>{
   document.getElementById('clearBtn').style.display = query ? 'block' : 'none';
 });
 
-// Limpiar búsqueda
 document.getElementById('clearBtn').addEventListener('click',()=>{
   searchInput.value='';
   renderProducts();
   document.getElementById('clearBtn').style.display='none';
 });
 
-// Inicio limpia búsqueda
 document.getElementById('homeLink').addEventListener('click',()=>{
   searchInput.value='';
   renderProducts();
