--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@ footer { background: var(--color-primary); color: var(--color-background); text-
         Tu navegador no soporta el elemento de video.
       </video>
     </div>
-    <div class="carousel-item"><img src="https://via.placeholder.com/1200x900?text=Hero+2" alt="Slide 2"></div>
+      </div>
+    <div class="carousel-item"><img src="images/EEE.png" alt="Slide 2"></div>
     <div class="carousel-item"><img src="https://via.placeholder.com/1200x900?text=Hero+3" alt="Slide 3"></div>
   </div>
 </section>
