--- a/index.html
+++ b/index.html
@@ -171,19 +171,22 @@ footer { background: var(--color-primary); color: var(--color-background); text-
     </ul>
   </nav>
 </header>
-
+  
 <!-- CARRUSEL -->
 <section class="carousel" id="inicio">
   <div class="carousel-inner">
+    <!-- Slide 1: Video -->
     <div class="carousel-item">
       <video id="videoSlide" autoplay muted playsinline>
         <source src="images/VIDEO1.mp4" type="video/mp4">
         Tu navegador no soporta el elemento de video.
       </video>
     </div>
+    <!-- Slide 2: Tela Negra -->
     <div class="carousel-item">
-      <img src="images/aaa.png" alt="Slide 2">
+      <img src="images/TELA_NEGRA.jpg" alt="Slide 2 - Tela Negra">
     </div>
+    <!-- Slide 3: Placeholder -->
     <div class="carousel-item">
       <img src="https://via.placeholder.com/1200x900?text=Hero+3" alt="Slide 3">
     </div>
