--- a/index.html
+++ b/index.html
@@ -171,22 +171,19 @@ footer { background: var(--color-primary); color: var(--color-background); text-
     </ul>
   </nav>
 </header>
-  
+
 <!-- CARRUSEL -->
 <section class="carousel" id="inicio">
   <div class="carousel-inner">
-    <!-- Slide 1: Video -->
     <div class="carousel-item">
       <video id="videoSlide" autoplay muted playsinline>
         <source src="images/VIDEO1.mp4" type="video/mp4">
         Tu navegador no soporta el elemento de video.
       </video>
     </div>
-    <!-- Slide 2: Tela Negra -->
     <div class="carousel-item">
-      <img src="images/TELA_NEGRA.jpg" alt="Slide 2 - Tela Negra">
+      <img src="images/TELA_NEGRA.png" alt="Slide 2 - Tela Negra">
     </div>
-    <!-- Slide 3: Placeholder -->
     <div class="carousel-item">
       <img src="https://via.placeholder.com/1200x900?text=Hero+3" alt="Slide 3">
     </div>
@@ -239,19 +236,14 @@ const video = document.getElementById('videoSlide');
 function showNextSlide() {
   index = (index + 1) % carouselItems.length;
 
+  // Reinicia el video si vuelve al primer slide
   if(index === 0){ video.currentTime = 0; video.play(); }
 
   carouselInner.style.transform = `translateX(-${index * 100}%)`;
 }
 
-// Ajustamos intervalo: 5s para imágenes, duración real para el video
-setInterval(()=>{
-  if(index===0){
-    // Esperamos la duración del video
-    const dur = video.duration * 1000 || 5000;
-    setTimeout(showNextSlide, dur);
-  } else { showNextSlide(); }
-},5000);
+// Cambia de slide cada 5 segundos
+setInterval(showNextSlide, 5000);
 
 // Productos
 const products = [
