--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ footer { background: var(--color-primary); color: var(--color-background); text-
       </video>
     </div>
     <div class="carousel-item">
-      <img src="images/TELA_NEGRA.png" alt="Slide 2 - Tela Negra">
+      <img src="images/TELA NEGRA.jpg" alt="Slide 2 - Tela Negra">
     </div>
     <div class="carousel-item">
       <img src="https://via.placeholder.com/1200x900?text=Hero+3" alt="Slide 3">
