--- a/index.html
+++ b/index.html
@@ -182,10 +182,10 @@ footer { background: var(--color-primary); color: var(--color-background); text-
       </video>
     </div>
     <div class="carousel-item">
-      <img src="images/TELA NEGRA.jpg" alt="Slide 2 - Tela Negra">
+      <img src="images/TELA_NEGRA.png" alt="Slide 2 - Tela Negra">
     </div>
     <div class="carousel-item">
-      <img src="https://via.placeholder.com/1200x900?text=Hero+3" alt="Slide 3">
+      <img src="images/SLIDE.jpg" alt="Slide 3">
     </div>
   </div>
 </section>
@@ -235,10 +235,7 @@ const video = document.getElementById('videoSlide');
 
 function showNextSlide() {
   index = (index + 1) % carouselItems.length;
-
-  // Reinicia el video si vuelve al primer slide
   if(index === 0){ video.currentTime = 0; video.play(); }
-
   carouselInner.style.transform = `translateX(-${index * 100}%)`;
 }
 
