--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>EREBUS</title>
+<title>Perfumes - EREBUS</title>
 <style>
 :root {
   --color-primary: #000;
@@ -33,19 +33,10 @@ header {
   align-items: center;
   justify-content: center;
   height: 70px;
-  transition: all 0.3s ease;
-  overflow: hidden;
 }
 
-.logo-container img {
-  height: 50px;
-  margin-right: 10px;
-  transition: all 0.3s ease;
-}
-
-.logo-container h1 { font-size: 1.8rem; transition: all 0.3s ease; }
-
-.header-hidden .logo-container { height: 0; transform: translateY(-100%); }
+.logo-container img { height: 50px; margin-right: 10px; }
+.logo-container h1 { font-size: 1.8rem; }
 
 nav ul {
   list-style: none;
@@ -65,25 +56,18 @@ nav ul li a {
 
 nav ul li a:hover { color: var(--color-accent); }
 
-/* CARRUSEL */
-.carousel { position: relative; overflow: hidden; max-height: 900px; margin-top: 70px; }
-.carousel-inner { display: flex; transition: transform 1s ease; }
-.carousel-item { min-width: 100%; position: relative; }
-.carousel-item img, .carousel-item video { width: 100%; display: block; object-fit: cover; max-height: 900px; }
-
-/* SECCIONES */
-section { padding: 4rem 2rem; text-align: center; }
+/* PRODUCTOS */
+section { padding: 6rem 2rem 4rem; text-align: center; }
 section h2 { margin-bottom: 2rem; font-size: 2rem; color: var(--color-primary); }
 
-/* PRODUCTOS */
 .products {
   display: grid;
   gap: 20px;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(5, 1fr);
 }
 
-@media (max-width:1024px){ .products { grid-template-columns: repeat(2,1fr); } }
-@media (max-width:768px){ .products { grid-template-columns: repeat(1,1fr); } }
+@media (max-width:1024px){ .products { grid-template-columns: repeat(3,1fr); } }
+@media (max-width:768px){ .products { grid-template-columns: repeat(2,1fr); } }
 
 .product {
   border: 1px solid var(--color-accent);
@@ -107,210 +91,61 @@ section h2 { margin-bottom: 2rem; font-size: 2rem; color: var(--color-primary); 
 .product .price { font-weight: bold; color: var(--color-primary); }
 
 /* FOOTER */
-footer { background: var(--color-primary); color: var(--color-background); text-align: center; padding: 2rem 1rem; }
-
-/* BUSCADOR */
-.search-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 2rem auto;
-  max-width: 650px;
-}
-
-#clearBtn {
-  font-size: 24px;
-  cursor: pointer;
-  margin-right: 10px;
-  color: #555;
-  user-select: none;
-  display: none;
-}
-
-#clearBtn:hover { color: #000; }
-
-.search-bar {
-  display: flex;
-  flex: 1;
-  border: 1px solid var(--color-accent);
-  border-radius: 4px;
-  overflow: hidden;
-  align-items: center;
-}
-
-.search-bar input {
-  flex: 1;
-  padding: 0.75rem;
-  border: none;
-  outline: none;
-  font-size: 16px;
-}
-
-.search-bar .lupa {
-  width: 18px;
-  height: 18px;
-  margin-left: 10px;
-  margin-right: 8px;
-  flex-shrink: 0;
-}
+footer { background: var(--color-primary); color: var(--color-background); text-align: center; padding: 2rem 1rem; margin-top: 2rem; }
 </style>
 </head>
 <body>
 
-<header id="mainHeader">
+<header>
   <div class="logo-container">
     <img src="images/LOGOE.png" alt="Logo">
     <h1>EREBUS</h1>
   </div>
   <nav>
     <ul>
-      <li><a href="#inicio" id="homeLink">Inicio</a></li>
-      <li><a href="#ropa">Ropa</a></li>
-      <li><a href="#perfumes">Perfumes</a></li>
-      <li><a href="#contacto">Contacto</a></li>
+      <li><a href="index.html#inicio">Inicio</a></li>
+      <li><a href="index.html#ropa">Ropa</a></li>
+      <li><a href="perfumes.html">Perfumes</a></li>
+      <li><a href="index.html#contacto">Contacto</a></li>
     </ul>
   </nav>
 </header>
 
-<!-- CARRUSEL -->
-<section class="carousel" id="inicio">
-  <div class="carousel-inner">
-    <div class="carousel-item">
-      <video id="videoSlide" autoplay muted playsinline>
-        <source src="images/VIDEO1.mp4" type="video/mp4">
-        Tu navegador no soporta el elemento de video.
-      </video>
-    </div>
-    <div class="carousel-item">
-      <img src="images/TELA NEGRA.jpg" alt="Slide 2 - Tela Negra">
-    </div>
-    <div class="carousel-item">
-      <img src="images/SLIDE3.jpg" alt="Slide 3 - Slide3">
-    </div>
-  </div>
-</section>
-
-<!-- BUSCADOR -->
-<div class="search-container">
-  <span id="clearBtn">&times;</span>
-  <div class="search-bar">
-    <svg class="lupa" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-      <circle cx="11" cy="11" r="7" stroke="black" stroke-width="2" fill="none"/>
-      <line x1="16" y1="16" x2="22" y2="22" stroke="black" stroke-width="2"/>
-    </svg>
-    <input type="text" id="searchInput" placeholder="Buscar productos...">
-  </div>
-</div>
-
-<!-- PRODUCTOS ROPA -->
-<section id="ropa">
-  <h2>Nuestra Ropa</h2>
-  <div class="products" id="ropaProducts"></div>
-</section>
-
-<!-- PRODUCTOS PERFUMES -->
-<section id="perfumes">
+<section>
   <h2>Nuestros Perfumes</h2>
   <div class="products" id="perfumeProducts"></div>
 </section>
 
-<!-- CONTACTO -->
-<section id="contacto">
-  <h2>Contacto</h2>
-  <p>Email: contacto@tutienda.com</p>
-  <p>Tel: +34 600 123 456</p>
-</section>
-
-<!-- FOOTER -->
 <footer>
   <p>&copy; 2024 Tu Tienda Elegante. Todos los derechos reservados.</p>
 </footer>
 
 <script>
-// Carrusel
-const carouselInner = document.querySelector('.carousel-inner');
-const carouselItems = document.querySelectorAll('.carousel-item');
-let index = 0;
-const video = document.getElementById('videoSlide');
-
-function showNextSlide() {
-  index = (index + 1) % carouselItems.length;
-
-  if(index === 0){ video.currentTime = 0; video.play(); }
-
-  carouselInner.style.transform = `translateX(-${index * 100}%)`;
-}
-
-setInterval(showNextSlide, 5000);
-
-// Productos
-const products = [
-  { id:1,name:"PLAYERA OVERSIZE NEGRA 220G",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",category:"ropa",keywords:"playera negra oversize"},
-  { id:2,name:"PLAYERA OVERSIZE NEGRA 220G",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",category:"ropa",keywords:"playera negra oversize"},
-  { id:3,name:"PLAYERA OVERSIZE NEGRA 220G",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",category:"ropa",keywords:"playera negra oversize"},
-  { id:4,name:"PLAYERA OVERSIZE NEGRA 220G",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",category:"ropa",keywords:"playera negra oversize"},
-  { id:5,name:"Perfume 120ML",description:"Aroma fresco y duradero.",price:"$299.00",image:"images/PERFUME1.png",category:"perfumes",keywords:"perfume amaderado intenso"},
-  { id:6,name:"Perfume 120ML",description:"Aroma fresco y duradero.",price:"$299.00",image:"images/PERFUME1.png",category:"perfumes",keywords:"perfume amaderado intenso"},
-  { id:7,name:"Perfume 60ML",description:"Aroma fresco y duradero.",price:"$199.00",image:"images/PERFUME1.png",category:"perfumes",keywords:"perfume amaderado intenso"},
-  { id:8,name:"Perfume 60ML",description:"Aroma fresco y duradero.",price:"$199.00",image:"images/PERFUME1.png",category:"perfumes",keywords:"perfume amaderado intenso"},
+const perfumes = [
+  { id:1,name:"Perfume 120ML",description:"Aroma fresco y duradero.",price:"$299.00",image:"images/PERFUME1.png"},
+  { id:2,name:"Perfume 120ML",description:"Aroma elegante y sofisticado.",price:"$350.00",image:"images/PERFUME1.png"},
+  { id:3,name:"Perfume 60ML",description:"Fragancia amaderada única.",price:"$199.00",image:"images/PERFUME1.png"},
+  { id:4,name:"Perfume 50ML",description:"Notas florales suaves.",price:"$180.00",image:"images/PERFUME1.png"},
+  { id:5,name:"Perfume 30ML",description:"Compacto y fresco para el día.",price:"$150.00",image:"images/PERFUME1.png"},
+  { id:6,name:"Perfume 250ML",description:"Fragancia intensa y duradera.",price:"$450.00",image:"images/PERFUME1.png"},
 ];
 
-function renderProducts(filteredProducts){
-  const ropaContainer = document.getElementById('ropaProducts');
-  const perfumeContainer = document.getElementById('perfumeProducts');
-  ropaContainer.innerHTML = '';
-  perfumeContainer.innerHTML = '';
-  const list = filteredProducts || products;
-  list.forEach(product=>{
+function renderPerfumes(){
+  const container = document.getElementById('perfumeProducts');
+  perfumes.forEach(p=>{
     const div = document.createElement('div');
     div.classList.add('product');
     div.innerHTML=`
-      <img src="${product.image}" alt="${product.name}">
-      <h3>${product.name}</h3>
-      <p>${product.description}</p>
-      <p class="price">${product.price}</p>
+      <img src="${p.image}" alt="${p.name}">
+      <h3>${p.name}</h3>
+      <p>${p.description}</p>
+      <p class="price">${p.price}</p>
     `;
-    if(product.category==='ropa') ropaContainer.appendChild(div);
-    else perfumeContainer.appendChild(div);
+    container.appendChild(div);
   });
 }
 
-// Filtrado
-const searchInput = document.getElementById('searchInput');
-searchInput.addEventListener('input', ()=>{
-  const query = searchInput.value.toLowerCase();
-  const filtered = products.filter(p =>
-    p.name.toLowerCase().includes(query) || p.keywords.toLowerCase().includes(query)
-  );
-  renderProducts(filtered);
-  document.getElementById('clearBtn').style.display = query ? 'block' : 'none';
-});
-
-document.getElementById('clearBtn').addEventListener('click',()=>{
-  searchInput.value='';
-  renderProducts();
-  document.getElementById('clearBtn').style.display='none';
-});
-
-document.getElementById('homeLink').addEventListener('click',()=>{
-  searchInput.value='';
-  renderProducts();
-  document.getElementById('clearBtn').style.display='none';
-});
-
-// Header animación
-const header = document.getElementById('mainHeader');
-let lastScrollTop = 0;
-window.addEventListener('scroll', ()=>{
-  const scrollTop = window.pageYOffset || document.documentElement.scrollTop;
-  if(scrollTop > lastScrollTop && scrollTop > 50){
-    header.classList.add('header-hidden');
-  } else { header.classList.remove('header-hidden'); }
-  lastScrollTop = scrollTop <= 0 ? 0 : scrollTop;
-});
-
-renderProducts();
+renderPerfumes();
 </script>
 </body>
 </html>
-
